network-policies/default-deny/minio.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny
  namespace: minio

spec:
  podSelector: {}

  policyTypes:
    - Ingress
