network-policies/default-deny/mongo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny
  namespace: mongo

spec:
  podSelector: {}

  policyTypes:
    - Ingress
