network-policies/default-deny/opensearch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny
  namespace: opensearch

spec:
  podSelector: {}

  policyTypes:
    - Ingress
