network-policies/default-deny/postgresql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny
  namespace: postgresql

spec:
  podSelector: {}

  policyTypes:
    - Ingress
