network-policies/default-deny/prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny
  namespace: prometheus

spec:
  podSelector: {}

  policyTypes:
    - Ingress
