network-policies/default-deny/rabbitmq.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny
  namespace: rabbitmq

spec:
  podSelector: {}

  policyTypes:
    - Ingress
