network-policies/default-deny/redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny
  namespace: redis

spec:
  podSelector: {}

  policyTypes:
    - Ingress
