network-policies/default-deny/traefik.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny
  namespace: monitoring

spec:
  podSelector: {}

  policyTypes:
    - Ingress
